# COM-514-diffusercam-project

./: .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml  requirements.yml  setup.py
DiffuserCam/: diffusercam  diffusercam.pub  setup.py
DiffuserCam/diffcam/: autocorr.py  io.py
DiffuserCam/scripts/: admm.py
notebooks/: convolve_benchmark.ipynb  plot_results.ipynb  prop_results_normal.txt  prop_results_worst.txt  ref_results_normal.txt  ref_results_worst.txt
src/data/: config.py  io.py  tuning.py
src/reconstruction/: convolution_fft.py  dct.py  frame_expansion.py  hubernorm.py  hyperopt.py  main.py  optimizers.py  pipelines.py  reconstruction.py  regularizations.py  score.py
