[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta:__legacy__"

[tool.pylint.'MASTER']
docstring-min-length = 5

[tool.pylint.'FORMAT']
max-line-length = 100

[tool.pylint.'BASIC']
variable-naming-style = "any"
argument-naming-style = "any"


[tool.black]
line-length = 100
target-version = ['py39']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
extend_skip_glob = ["env/*"]